css/general.css
/* ... */
.navbar .dropdown ul i {
  font-size: 12px;
  color: #1e3769;
}

@media (max-width: 1200px) {
  .logo img {
    width: 100%;
  }
}

@media (max-width: 991px) {
  .mobile-nav-toggle {
    display: block;
  }
  .logo img {
    width: 60%;
  }
  .navbar ul {
    display: none;
  }
  
  .navbar .dropdown ul {
    display: block;
    position: absolute;
    left: 18%;
    top: 0px;
    height: 200px;
    visibility: none;
    border-radius: 4px;

  }
  .navbar .dropdown ul li {
    max-width: 150px;
  }
  
  .navbar .dropdown ul a {
    padding: 10px 20px;
    font-size: 14px;
    text-transform: none;
    font-weight: bold;
    text-decoration: none;
    color: #1e3769;
  }
}

.navbar-mobile {
  position: fixed;
  overflow: hidden;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background: rgba(9, 9, 9, 0.9);
  transition: 0.3s;
  z-index: 999;
}

.navbar-mobile .mobile-nav-toggle {
  position: absolute;
  top: 15px;
  right: 15px;
}

.navbar-mobile ul {
  display: block;
  position: absolute;
  top: 55px;
  right: 15px;
  bottom: 15px;
  left: 15px;
  padding: 10px 0;
  background-color: #fff;
  overflow-y: auto;
  transition: 0.3s;
  border-radius: 10px;
}


.navbar-mobile a,
.navbar-mobile a:focus {
  padding: 10px 20px;
  font-size: 15px;
  color: #1e3769;
}

.navbar-mobile > ul > li {
  padding: 0;
}

.navbar-mobile a:hover:before,
.navbar-mobile li:hover > a:before,
.navbar-mobile .active:before {
  visibility: hidden;
}

.navbar-mobile a:hover,
.navbar-mobile .active,
.navbar-mobile li:hover > a {
  color: #f9690e;
}

.navbar-mobile .getstarted,
.navbar-mobile .getstarted:focus {
  margin: 15px;
}

@media (max-width: 1366px) {
  .navbar .dropdown .dropdown ul {
    left: -90%;
  }

  .navbar .dropdown .dropdown:hover > ul {
    left: -100%;
  }
}

.navbar .dropdown ul a:hover,
.navbar .dropdown ul .active:hover,
.navbar .dropdown ul li:hover > a {
  color: #f9690e;
}

.navbar .dropdown:hover > ul {
  opacity: 1;
  visibility: visible;
}

.navbar .dropdown .dropdown ul {
  top: 0;
  left: calc(100% - 30px);
  visibility: hidden;
}

.navbar .dropdown .dropdown:hover > ul {
  opacity: 1;
  top: 0;
  left: 100%;
  visibility: visible;
}

#sub-navbar {
  display: none;
}

@media (max-width: 768px) {
  .navbar .dropdown ul {
    display: none;
  }

  #navbar ul li {
    width: 100%;
    text-align: center;
  }
  #navbar ul li a:hover {
    background-color: #fff;
  }

  #navbar .mobile-nav-toggle {
    display: block;
    font-size: 28px;
    color: #000;
    cursor: pointer;
  }
  
  .navbar a,
  .navbar a:focus {
    display: block;
    padding: 10 7px;
    font-size: 16px;
    font-weight: 600;
    color: #1e3769;
    white-space: nowrap;
    transition: 0.3s;
    position: relative;
  }


    .navbar-mobile ul {
      display: block; 
      justify-content: center; 
      align-items: center; 
      list-style: none;
      padding: 0;
  }

  #navbar.navbar-mobile {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #fff;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 9999;
    padding: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  }

  #navbar.navbar-mobile .logo {
    margin-left: auto;
  }

  .logo img {
    height: 35px;
    width: auto;
  }

  #header {
    position: relative;
  }

  #sub-navbar {
    display: block;
    background-color: #fff;
    position: fixed;
    top: 86px;
    left: 0;
    padding-right: 20px;
    z-index: 9999;
    background-color: #fff;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    white-space: nowrap;
    transition: transform 0.5s, opacity 0.5s;
    opacity: 1;
    pointer-events: auto;
    max-width: 100%;
  }



  #sub-navbar .dropdown a.active{
    color: #f9690e;
  }

  #sub-navbar ul li a.active,
  #sub-navbar ul li a:hover {
    color: #f9690e;
  }
  

  
  #sub-navbar.active {
    color: #f9690e;
    opacity: 0;
    pointer-events: none;
  }

  #sub-navbar ul {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding: 0;
    margin-top: 10px;
    list-style-type: none;
    white-space: nowrap;
    overflow-x: auto;
    overflow-y: hidden; 
    position: relative; 
    z-index: 99;
  }
  

  #sub-navbar ul::-webkit-scrollbar {
    display: none;
  }

  #sub-navbar ul li {
    margin-top: 7px;
    margin-right: 7px;
    margin-bottom: 7px;
    position: relative;
  
  }

  #sub-navbar ul li:first-child a {
    position: sticky;
    left: 0;
    z-index: 1000000;
  }

  #sub-navbar ul li a {
    display: block;
    font-size: 14px;
    font-weight: bold;
    text-decoration: none;
    color: #1e3769;
    transition: 0.3s;
    margin-right: 15px;
  }

  #sub-navbar ul li a:hover {
    background-color: #fff;
    color: #f9690e;
  }
  #sub-navbar ul li:first-child {
    position: sticky;
    left: 0;
    z-index: 1000000;

  }

  #sub-navbar .icon-home {
    position: relative;
    border: 1px solid #cad5eb;
    background-color: #cad5eb;
    border-radius: 50px;
    padding: 12px;
  }

  #sub-navbar .icon-square {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 70px;
    height: 60px;
    background-color: #fff;
    border-radius: 4px;
    z-index: -1;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  }


  #sub-navbar ul .dropdown-menu {
    background: #fff;
    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
    border-radius: 4px;
    display: none;
    left: 0;
    margin-top: 29px;
    position: fixed;
    z-index: 1000000;
    white-space: nowrap;
    width: 80%;
    left: 17%;
  }
  
  #sub-navbar ul .active .dropdown-menu {
    display: block;
  }


}

/* end header */

/* Footer */
#footer {
  margin-top: 100px;
}

.img-footer {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 100px;
}

.footer-img img {
  max-width: 80%;
  float: right;
  height: auto;
}

.footer-under {
  padding-bottom: 10px;
}
/* ... */

